--- a/children_games/scream/ld.cls
+++ b/children_games/scream/ld.cls
@@ -1,6 +1,10 @@
 SECTIONS {
-	.text		:	{	avr.o(.vectors)	 avr.o(.text) *(.text) *(.text.*) *(.progmem.data)	}
+	.text		:	{	avr.o(.vectors)	 avr.o(.text) *(.text) *(.text.*) *(.progmem.data) *(.progmem.*)	}
 	. = 0x800000;
 	.data		:	{	*(.data)	}
-	.bss		:	{	*(.bss)		}
+	.bss		:	{
+		PROVIDE (__bss_start = .);
+		*(.bss)
+		PROVIDE (__bss_end = .);
+	}
 }
